<resources>
    <string name="app_name">android-jsBridgeUI</string>

    <string name="data_parse_err">数据解析错误</string>
    <string name="local_parse_err">本地解析出错</string>
    <string name="get_data_err_please_try">获取数据错误，请重试</string>
    <string name="please_login_again">用户异常,请重新登录</string>
    <string name="get_data_err">网络请求异常</string>
    <string name="get_data_faile_please_try">获取数据失败，请稍后重试</string>
    <string name="has_alittle_problem">有点小问题，不要着急，程序员哥哥正在抢修！</string>
    <string name="network_err_please_check">网络连接异常，请检查网络设置</string>
    <string name="please_refresh">数据开小差了，再刷新试试看！</string>
    <string name="unknow_exception">未知的网络异常哦</string>
    <string name="text_tip">提示</string>
    <string name="text_confirm">确定</string>
    <string name="text_cancel">取消</string>
    <string name="text_close">关闭</string>
    <string name="new_version">发现新版本</string>
    <string name="update_delay">暂不更新</string>
    <string name="update_now">立即更新</string>
    <string name="i_know_it">我知道了</string>
    <string name="loading_please_wait">正在加载，请稍等…</string>
    <string name="common_dialog_title">提示</string>
    <string name="confirm">确认</string>
    <string name="net_error_data">网络不给力，请检查您的网络</string>
    <string name="have_some_problem_please_contacts_user_service">该功能还不支持哦，尝试联系客服解决下吧</string>
    <string name="no_data">暂无数据</string>
    <string name="no_more_data">没有更多数据了</string>
    <string name="network_error_please_check">网路未连接,请检查网路设置!</string>
    <string name="please_set_file_download_link">请设置文件下载链接!</string>
    <string name="not_wifi_if_continue_download">当前处于非WIFI环境,是否继续下载该文件(%1$s)</string>
    <string name="confirm_download">确定下载</string>
    <string name="unknown_size">未知大小</string>
    <string name="contact_us_not_install_wx_yet">您好像没有安装微信</string>

    <!--分享-->
    <string name="share_tv_wx_friend">微信好友</string>
    <string name="share_tv_wx_moments">微信朋友圈</string>
    <string name="text_share_sina_weibo">新浪微博</string>
    <string name="share_tv_qq_friend">QQ好友</string>
    <string name="share_tv_qq_zone">QQ空间</string>
    <string name="share_tv_copy_link">复制链接</string>
    <string name="share_tv_cancel">取消</string>
    <string name="share_invalid">分享内容无效！</string>
    <string name="my_order_record">我的购买记录</string>
    <string name="copy_success">复制成功</string>
    <string name="share_failed">分享失败，请重试！</string>
    <string name="share_success">分享成功！</string>
    <string name="share_cancel">取消分享！</string>
    <string name="share_failed_title">分享失败，分享标题过长！</string>
    <string name="share_failed_content">分享失败，分享内容过长！</string>
    <string name="share_failed_photo">分享失败，分享图片过大！</string>
    <string name="wx_login_success">微信登陆成功！</string>
    <string name="wx_login_cancel">微信登录授权取消！</string>
    <string name="wx_login_failed">登录授权失败，请重试！</string>
    <string name="err_comm">一般错误!</string>
    <string name="err_sent_failed">发送失败错误!</string>
    <string name="err_unsupport">不支持错误!</string>
</resources>
