<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f4f4f4"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_share_weixin_friend"
            style="@style/Text.black_light.f6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="7dp"
            android:drawableTop="@drawable/icon_share_weixin"
            android:gravity="center"
            android:text="@string/share_tv_wx_friend" />

        <TextView
            android:id="@+id/tv_share_weixin_moments"
            style="@style/Text.black_light.f6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="7dp"
            android:drawableTop="@drawable/icon_share_moments"
            android:gravity="center"
            android:text="@string/share_tv_wx_moments" />

        <TextView
            android:id="@+id/tv_share_sina_weibo"
            style="@style/Text.black_light.f6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="7dp"
            android:drawableTop="@drawable/icon_share_weibo"
            android:gravity="center"
            android:text="@string/text_share_sina_weibo"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_share_qq_friend"
            style="@style/Text.black_light.f6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="7dp"
            android:drawableTop="@drawable/icon_share_qq"
            android:gravity="center"
            android:text="@string/share_tv_qq_friend" />

        <TextView
            android:id="@+id/tv_share_qq_zone"
            style="@style/Text.black_light.f6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="7dp"
            android:drawableTop="@drawable/icon_share_qqspace"
            android:gravity="center"
            android:text="@string/share_tv_qq_zone" />

        <TextView
            android:id="@+id/tv_share_copy_link"
            style="@style/Text.black_light.f6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="7dp"
            android:drawableTop="@drawable/icon_share_copy_like"
            android:gravity="center"
            android:text="@string/share_tv_copy_link" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_share_cancel"
        style="@style/Text.black_light.f2"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="15dp"
        android:background="@color/palette_white"
        android:gravity="center"
        android:text="@string/share_tv_cancel" />
</LinearLayout>